--- a/Natours/starter/package.json
+++ b/Natours/starter/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/bhagya099/Nature_sass_project#readme",
   "devDependencies": {
     "node-sass": "^8.0.0"
+  },
+  "dependencies": {
+    "jquery": "^3.6.4"
   }
 }
